creation of outline of lqr and K matrix generators

--- a/DeriveEOM.ipynb
+++ b/DeriveEOM.ipynb
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "id": "religious-fountain",
    "metadata": {},
    "outputs": [],
@@ -177,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "chief-guatemala",
    "metadata": {},
    "outputs": [
@@ -193,7 +193,7 @@
        "[18*cos(theta)/5,                                                            0,         108/125]])"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "former-accordance",
    "metadata": {},
    "outputs": [
@@ -220,7 +220,7 @@
        "[         39*w**2*sin(theta)*cos(theta)/25 + 18*sin(theta)]])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "liquid-algeria",
    "metadata": {
     "scrolled": true
@@ -249,7 +249,7 @@
        "[    -1,    -1]])"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,23 +260,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "id": "a6682895",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/latex": [
-       "$\\displaystyle \\left[\\begin{matrix}- \\frac{1200 \\tau_{L} + 1200 \\tau_{R} + 1404 \\left(v_{2}^{2} + w^{2}\\right) \\sin{\\left(\\theta \\right)} + \\frac{65 \\left(50 \\tau_{L} + 50 \\tau_{R} - 39 w^{2} \\sin{\\left(2 \\theta \\right)} - 900 \\sin{\\left(\\theta \\right)}\\right) \\cos{\\left(\\theta \\right)}}{2}}{5850 \\cos^{2}{\\left(\\theta \\right)} - 6084}\\\\\\frac{32 \\left(- 875 \\tau_{L} + 875 \\tau_{R} - 2925 v w \\sin{\\left(\\theta \\right)} - 1443 v_{2} w \\sin{\\left(2 \\theta \\right)}\\right)}{13 \\left(3120 \\sin^{2}{\\left(\\theta \\right)} + 2051\\right)}\\\\\\frac{5 \\left(4225 \\tau_{L} + 4225 \\tau_{R} - \\frac{6591 w^{2} \\sin{\\left(2 \\theta \\right)}}{2} + 30 \\left(100 \\tau_{L} + 100 \\tau_{R} + 117 \\left(v_{2}^{2} + w^{2}\\right) \\sin{\\left(\\theta \\right)}\\right) \\cos{\\left(\\theta \\right)} - 76050 \\sin{\\left(\\theta \\right)}\\right)}{702 \\left(25 \\cos^{2}{\\left(\\theta \\right)} - 26\\right)}\\end{matrix}\\right]$"
+       "$\\displaystyle \\left[\\begin{matrix}v \\sin{\\left(e_{h} \\right)}\\\\w\\\\v \\sin{\\left(e_{h} \\right)}\\\\w\\\\- \\frac{1200 \\tau_{L} + 1200 \\tau_{R} + 1404 \\left(\\dot{\\theta}^{2} + w^{2}\\right) \\sin{\\left(\\theta \\right)} + \\frac{65 \\left(50 \\tau_{L} + 50 \\tau_{R} - 39 w^{2} \\sin{\\left(2 \\theta \\right)} - 900 \\sin{\\left(\\theta \\right)}\\right) \\cos{\\left(\\theta \\right)}}{2}}{5850 \\cos^{2}{\\left(\\theta \\right)} - 6084}\\\\\\frac{32 \\left(- 875 \\tau_{L} + 875 \\tau_{R} - 1443 \\dot{\\theta} w \\sin{\\left(2 \\theta \\right)} - 2925 v w \\sin{\\left(\\theta \\right)}\\right)}{13 \\left(3120 \\sin^{2}{\\left(\\theta \\right)} + 2051\\right)}\\\\\\frac{5 \\left(4225 \\tau_{L} + 4225 \\tau_{R} - \\frac{6591 w^{2} \\sin{\\left(2 \\theta \\right)}}{2} + 30 \\left(100 \\tau_{L} + 100 \\tau_{R} + 117 \\left(\\dot{\\theta}^{2} + w^{2}\\right) \\sin{\\left(\\theta \\right)}\\right) \\cos{\\left(\\theta \\right)} - 76050 \\sin{\\left(\\theta \\right)}\\right)}{702 \\left(25 \\cos^{2}{\\left(\\theta \\right)} - 26\\right)}\\\\v_{2}\\end{matrix}\\right]$"
       ],
       "text/plain": [
        "Matrix([\n",
-       "[        -(1200*tau_L + 1200*tau_R + 1404*(v2**2 + w**2)*sin(theta) + 65*(50*tau_L + 50*tau_R - 39*w**2*sin(2*theta) - 900*sin(theta))*cos(theta)/2)/(5850*cos(theta)**2 - 6084)],\n",
-       "[                                                                    32*(-875*tau_L + 875*tau_R - 2925*v*w*sin(theta) - 1443*v2*w*sin(2*theta))/(13*(3120*sin(theta)**2 + 2051))],\n",
-       "[5*(4225*tau_L + 4225*tau_R - 6591*w**2*sin(2*theta)/2 + 30*(100*tau_L + 100*tau_R + 117*(v2**2 + w**2)*sin(theta))*cos(theta) - 76050*sin(theta))/(702*(25*cos(theta)**2 - 26))]])"
+       "[                                                                                                                                                                           v*sin(e_h)],\n",
+       "[                                                                                                                                                                                    w],\n",
+       "[                                                                                                                                                                           v*sin(e_h)],\n",
+       "[                                                                                                                                                                                    w],\n",
+       "[        -(1200*tau_L + 1200*tau_R + 1404*(thetadot**2 + w**2)*sin(theta) + 65*(50*tau_L + 50*tau_R - 39*w**2*sin(2*theta) - 900*sin(theta))*cos(theta)/2)/(5850*cos(theta)**2 - 6084)],\n",
+       "[                                                                    32*(-875*tau_L + 875*tau_R - 1443*thetadot*w*sin(2*theta) - 2925*v*w*sin(theta))/(13*(3120*sin(theta)**2 + 2051))],\n",
+       "[5*(4225*tau_L + 4225*tau_R - 6591*w**2*sin(2*theta)/2 + 30*(100*tau_L + 100*tau_R + 117*(thetadot**2 + w**2)*sin(theta))*cos(theta) - 76050*sin(theta))/(702*(25*cos(theta)**2 - 26))],\n",
+       "[                                                                                                                                                                                   v2]])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 30,
    "id": "recreational-termination",
    "metadata": {},
    "outputs": [],
@@ -318,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 31,
    "id": "8f16e9c9",
    "metadata": {},
    "outputs": [
@@ -337,7 +342,7 @@
        "[                                                                                                                                                                             v2]])"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,19 +361,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 32,
    "id": "3ae34e1e",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.0, 4.0, 0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 1.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0, 0.0, -125.0], [0.0, 0.0, -0.0, -0.0, -0.0, -0.0], [0.0, 0.0, 0.0, -0.0, -0.0, 541.6666666666666], [0.0, 0.0, 0.0, 0.0, 1.0, 0.0]]\n",
+      "[[0.0, 3.0, 0.0, 0.0, 0.0, 0.0], [0.0, 0.0, 0.0, 1.0, 0.0, 0.0], [0.0, 0.0, 0.0, 0.0, 0.0, -125.0], [0.0, 0.0, -0.0, -0.0, -0.0, -0.0], [0.0, 0.0, 0.0, -0.0, -0.0, 541.6666666666666], [0.0, 0.0, 0.0, 0.0, 1.0, 0.0]]\n",
       "\n",
       "\n",
       "[[0.0, 0.0], [0.0, 0.0], [12.072649572649572, 12.072649572649572], [1.0501443948542923, -1.0501443948542923], [-51.46011396011396, -51.46011396011396], [0.0, 0.0]]\n",
-      "K [[8.705159665502574, 27.021985997019915, -0.23603927024932259, 6.427898112684182, -0.17552727121803446, -5.712966264137405], [-8.700840606513488, -27.01241173620554, -0.03431680860448798, -6.426680471293729, -0.09195660109379074, -5.449516273646485]]\n",
+      "K [[86.60254037844362, 67.69608017428541, -1.224744871391593, 8.030478961180537, -1.1871145929331846, -11.684495926083372], [-86.60254037844354, -67.6960801742853, -1.2247448713915645, -8.030478961180519, -1.1871145929331774, -11.684495926083358]]\n",
       "Controllable: True\n"
      ]
     }
@@ -394,7 +401,7 @@
     "\n",
     "e_le= 0.\n",
     "e_he = 0.\n",
-    "ve = 4.\n",
+    "ve = 3.\n",
     "thetae = 0.\n",
     "we = 0.\n",
     "v2e = 0.\n",
@@ -410,11 +417,17 @@
     "print(\"\\n\")\n",
     "print(B.tolist())\n",
     "\n",
-    "p = np.array([-6.5, -5.5, -4.5, -3.5, -2.5, -1.5]).astype(float)\n",
+    "# p = np.array([-6.5, -5.5, -4.5, -3.5, -2.5, -1.5]).astype(float)\n",
     "\n",
-    "K = signal.place_poles(A, B, p).gain_matrix\n",
+    "# K = signal.place_poles(A, B, p).gain_matrix\n",
     "\n",
+    "for i in \n",
     "\n",
+    "Q = np.diag([15000.,820.,3.,0.05,1.,15.]) \n",
+    "R = np.eye(2)\n",
+    "P = linalg.solve_continuous_are(A, B, Q, R)\n",
+    "K = linalg.inv(R) @  B.T @ P\n",
+    "linalg.eigvals(A - B @ K)\n",
     "print(\"K\", K.tolist())\n",
     "\n",
     "def W(A,B):\n",
@@ -433,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "id": "396e61cf",
    "metadata": {},
    "outputs": [
